[MNG-8535] Full std stream support for executor
The std stream support was incomplete in maven-executor

---

https://issues.apache.org/jira/browse/MNG-8535